# paper-workflow

./: .gitignore  CLAUDE.md  README.md
arxiv-papers-extracted/: 01_Trustworthiness_in_RAG_Systems_Survey_extracted.md  02_Graph_RAG_Survey_extracted.md  03_LLM_RankFusion_extracted.md  04_RAG_for_AIGC_Survey_extracted.md  05_RAG_for_LLMs_Survey_extracted.md  06_Hallucination_Mitigation_Survey_extracted.md  07_Knowledge_Integration_LLMs_Survey_extracted.md  08_LLM_Agents_Survey_extracted.md  09_LLMs_for_IR_Survey_extracted.md  10_Survey_Retrieval_Augmented_Text_Generation_extracted.md
arxiv-papers-fusion/: fusion_angle_01_RAG_enhancement.md  fusion_angle_02_trustworthiness_hallucination.md  fusion_angle_03_agent_IR.md  fusion_angle_04_graph_knowledge.md  fusion_angle_05_cross_domain.md
arxiv-papers-md/: 01_Trustworthiness_in_RAG_Systems_Survey.md  02_Graph_RAG_Survey.md  03_LLMs_Future_of_IR.md  04_RAG_for_AIGC_Survey.md  05_RAG_for_LLMs_Survey.md  06_Hallucination_Mitigation_Survey.md  07_Knowledge_Integration_LLMs_Survey.md  08_LLM_Agents_Survey.md  09_LLMs_for_IR_Survey.md  10_Survey_Retrieval_Augmented_Text_Generation.md
experiments/: plot_results.py  pyproject.toml  run_experiment.py
experiments/data/: download_datasets.py
experiments/src/: config.py  evaluator.py  knowledge_graph.py  llm_client.py  pipeline.py  retriever.py
experiments/src/baselines/: crag.py  graph_rag.py  naive_rag.py  self_rag.py
experiments/src/modules/: graph_generation.py  graph_retrieval.py  hallucination_detect.py  iterative_refine.py  retrieval_judge.py  trust_filter.py
(+29 files in other folders)
